--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,15 @@
     android:background="@drawable/background">
 
 
+    <Button
+        android:id="@+id/end_button"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="164dp"
+        android:background="@color/colorAccent"
+        android:text="@string/end" />
 
     <TextView
         android:id="@+id/storyTextView"
